      that may well change before release.
      This addresses \PR{15072} by Russ Lenth and is based on his original
      proposal and discussions in \PR{16158} also by David Firth and Elin Waring.
      Experimental; may be updated before release.

      \item \command{Rgui} console implementation now works better with the
      \code{NVDA} screen reader when the full blinking cursor is selected. 
      The underlying improvements in cursor handling may help also other
      screen readers on Windows.

      \item The dropfield control in GraphApp can now be left with the TAB
      key, improving accessibility of the \command{Rgui} configuration
      editor.
    }
  }

  \subsection{DATES and TIMES}{
    \itemize{
      \item On platforms where (non-UTC) datetimes before 1902 (or
      before 1900 as with system functions on recent macOS) are guessed
      by extrapolating time zones from 1902-2037, there is a warning at
      the first use of extrapolation in a session.  (As all time zones
      post 2037 are extrapolation, we do not warn on those.)

      \item (Platforms using \option{--with-internal-tzone}, including
      Windows and by default macOS). How years are printed in dates or
      date-times can be controlled by environment variable
      \env{R_PAD_YEARS_BY_ZERO}.  The default remains to pad to 4 digits
      by zeroes, but setting value \samp{no} gives no padding (as used
      by default by \code{glibc}).

      \item \code{strftime()} tries harder to determine the offset for
      the \code{"\%z"} format, and succeeds on the mainstream \R platforms.

      \item \code{strftime()} has a limit of 2048 bytes on the string
      produced -- attempting to exceed this is an error.  (Previously it
      silently truncated at 255 bytes.)

      \item \code{sessionInfo()} records (and by default prints) the
      system time zone as part of the locale information.  Also, the
      source (system/internal) of the date-time conversion and printing