@@ -1,0 +1,9 @@
+Package: PR17859.1
+Title: Seeing Parsing Error in file it happens - in one-file
+Version: 1.0
+Author: Martin Maechler
+Maintainer: R Core <R-core@almost.r-project.org>
+Description: Example package with parsing (syntax) error limited to one R file (always worked)
+License: GPL (>= 2)
+NeedsCompilation: no
+
