@@ -1,0 +1,1 @@
+f1 <- \(x) sin(pi/2*x)
