@@ -1,0 +1,2 @@
+f3 <- \(x) exp(-x^2/2)
+
